--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <link rel="canonical" href="https://navipromotions.in/404.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
@@ -35,7 +35,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -116,7 +116,7 @@
         <!-- 404 -->
         <div class="mil-dark-bg mil-add-page">
             <div class="mil-deco mil-deco-accent" style="top: 40vh; right: 10%; transform: rotate(90deg)"></div>
-            <img src="img/images/map.webp" alt="background" class="mil-map-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-map-bg">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-4">
