--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
 
     <link rel="canonical" href="https://navipromotions.in/index.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
@@ -41,7 +41,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -124,13 +124,13 @@
             <div class="swiper-container mil-banner-slideshow">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="img/images/home1.avif" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://navipromotions.in/img/images/home1.avif" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                     <div class="swiper-slide">
-                        <img src="img/images/home2.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://navipromotions.in/img/images/home2.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                     <div class="swiper-slide">
-                        <img src="img/images/home3.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://navipromotions.in/img/images/home3.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                 </div>
             </div>
@@ -213,12 +213,12 @@
         <!-- <div class="mil-partners mil-p-90-60">
             <div class="container">
                 <div class="mil-partners-frame">
-                    <a href="#."><img src="img/partners/1.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/2.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/3.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/4.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/5.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/6.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/1.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/2.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/3.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/4.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/5.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
                 </div>
             </div>
         </div> -->
@@ -499,7 +499,7 @@
 
                             <a href="project1.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/project1.jpg" alt="project">
+                                    <img src="https://navipromotions.in/img/images/project1.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -517,7 +517,7 @@
 
                             <a href="project2.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/project2.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/project2.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -535,7 +535,7 @@
 
                             <a href="project3.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/project3.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -553,7 +553,7 @@
 
                             <a href="project.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/projects/4.jpg" alt="project">
+                                    <img src="https://navipromotions.in/img/projects/4.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -600,7 +600,7 @@
                         <div class="mil-mb-60">
                             <div class="mil-icon-box-head mil-mb-30">
                                 <div class="mil-icon-frame mil-icon-frame-sm">
-                                    <img src="img/icons/sm/1.svg" alt="icon">
+                                    <img src="https://navipromotions.in/img/icons/sm/1.svg" alt="icon">
                                 </div>
                                 <h5>Strategic Promotions</h5>
                             </div>
@@ -613,7 +613,7 @@
                         <div class="mil-mb-60">
                             <div class="mil-icon-box-head mil-mb-30">
                                 <div class="mil-icon-frame mil-icon-frame-sm">
-                                    <img src="img/icons/sm/2.svg" alt="icon">
+                                    <img src="https://navipromotions.in/img/icons/sm/2.svg" alt="icon">
                                 </div>
                                 <h5>Data-Driven Growth</h5>
                             </div>
@@ -626,7 +626,7 @@
                         <div class="mil-mb-60">
                             <div class="mil-icon-box-head mil-mb-30">
                                 <div class="mil-icon-frame mil-icon-frame-sm">
-                                    <img src="img/icons/sm/3.svg" alt="icon">
+                                    <img src="https://navipromotions.in/img/icons/sm/3.svg" alt="icon">
                                 </div>
                                 <h5> Engaging Audiences</h5>
                             </div>
@@ -639,7 +639,7 @@
                         <div class="mil-mb-60">
                             <div class="mil-icon-box-head mil-mb-30">
                                 <div class="mil-icon-frame mil-icon-frame-sm">
-                                    <img src="img/icons/sm/4.svg" alt="icon">
+                                    <img src="https://navipromotions.in/img/icons/md/4.svg" alt="icon">
                                 </div>
                                 <h5>Innovative Branding</h5>
                             </div>
@@ -803,7 +803,7 @@
 
                             <a href="blog1.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/blog1.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/blog1.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -830,7 +830,7 @@
                                     </div>
                                 </div>
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/blog2.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/blog2.avif" alt="project">
                                 </div>
                             </a>
 
@@ -839,7 +839,7 @@
 
                             <a href="blog3.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/blog3.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/blog3.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -858,7 +858,7 @@
 
                             <a href="blog4.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/blog4.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/blog4.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -885,7 +885,7 @@
                                     </div>
                                 </div>
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/blog5.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/blog5.avif" alt="project">
                                 </div>
 
                             </a>
@@ -895,7 +895,7 @@
 
                             <a href="blog6.html" class="mil-card mil-card-sm">
                                 <div class="mil-cover-frame">
-                                    <img src="img/images/blog6.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/images/blog6.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -950,7 +950,7 @@
 
                             <div class="mil-review">
                                 <div class="mil-stars mil-mb-30">
-                                    <img src="img/icons/sm/11.svg" alt="quote">
+                                    <img src="https://navipromotions.in/img/icons/sm/11.svg" alt="quote">
                                     <ul>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
@@ -962,7 +962,7 @@
 
                                 <p class="mil-mb-30">Navi Promotions transformed our online presence with a stunning, user-friendly website. Their attention to detail and creativity exceeded our expectations!</p>
                                 <div class="mil-author">
-                                    <!-- <img src="img/faces/1.jpg" alt="Customer"> -->
+                                    <!-- <img src="https://navipromotions.in/img/faces/1.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Arun Kumar</h6>
                                         <span class="mil-text-sm">Manager</span>
@@ -975,7 +975,7 @@
 
                             <div class="mil-review">
                                 <div class="mil-stars mil-mb-30">
-                                    <img src="img/icons/sm/11.svg" alt="quote">
+                                    <img src="https://navipromotions.in/img/icons/sm/11.svg" alt="quote">
                                     <ul>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
@@ -986,7 +986,7 @@
                                 </div>
                                 <p class="mil-mb-30">Their digital marketing strategies helped us generate more leads and increase our conversion rate significantly. Highly recommend their expertise!</p>
                                 <div class="mil-author">
-                                    <!-- <img src="img/faces/2.jpg" alt="Customer"> -->
+                                    <!-- <img src="https://navipromotions.in/img/faces/2.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Priya Sharma</h6>
                                         <span class="mil-text-sm">CEO</span>
@@ -999,7 +999,7 @@
 
                             <div class="mil-review">
                                 <div class="mil-stars mil-mb-30">
-                                    <img src="img/icons/sm/11.svg" alt="quote">
+                                    <img src="https://navipromotions.in/img/icons/sm/11.svg" alt="quote">
                                     <ul>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
@@ -1010,7 +1010,7 @@
                                 </div>
                                 <p class="mil-mb-30">The graphic design team at Navi Promotions brought our brand to life with unique and eye-catching visuals. Their creativity and professionalism are unmatched!</p>
                                 <div class="mil-author">
-                                    <!-- <img src="img/faces/3.jpg" alt="Customer"> -->
+                                    <!-- <img src="https://navipromotions.in/img/faces/3.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Rahul Verma</h6>
                                         <span class="mil-text-sm">Operation Executive</span>
@@ -1023,7 +1023,7 @@
 
                             <div class="mil-review">
                                 <div class="mil-stars mil-mb-30">
-                                    <img src="img/icons/sm/11.svg" alt="quote">
+                                    <img src="https://navipromotions.in/img/icons/sm/11.svg" alt="quote">
                                     <ul>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
@@ -1034,7 +1034,7 @@
                                 </div>
                                 <p class="mil-mb-30">We needed a custom software solution, and the development team delivered beyond our expectations. The software is seamless, efficient, and scalable!</p>
                                 <div class="mil-author">
-                                    <!-- <img src="img/faces/4.jpg" alt="Customer"> -->
+                                    <!-- <img src="https://navipromotions.in/img/faces/4.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Suresh Balan</h6>
                                         <span class="mil-text-sm">Chief Manager</span>
@@ -1047,7 +1047,7 @@
 
                             <div class="mil-review">
                                 <div class="mil-stars mil-mb-30">
-                                    <img src="img/icons/sm/11.svg" alt="quote">
+                                    <img src="https://navipromotions.in/img/icons/sm/11.svg" alt="quote">
                                     <ul>
                                         <li><i class="fas fa-star"></i></li>
                                         <li><i class="fas fa-star"></i></li>
@@ -1058,7 +1058,7 @@
                                 </div>
                                 <p class="mil-mb-30">Their video editing team produced high-quality promotional videos that perfectly captured our brand’s message. Engaging, professional, and visually stunning!</p>
                                 <div class="mil-author">
-                                    <!-- <img src="img/faces/2.jpg" alt="Customer"> -->
+                                    <!-- <img src="https://navipromotions.in/img/faces/2.jpg" alt="Customer"> -->
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Meera Iyer</h6>
                                         <span class="mil-text-sm">Marketing Manager</span>
@@ -1134,14 +1134,14 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
                             
-                            <img src="img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 350px;" >
+                            <img src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 350px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
@@ -1226,12 +1226,12 @@
             var topPanel = document.querySelector(".mil-top-panel");
 
             if (window.scrollY > 50) {
-                logo.src = "img/logo/fixed-logo.png";
+                logo.src = "https://navipromotions.in/img/logo/fixed-logo.png";
                 logo.style.margin = "0";  
                 logo.style.padding = "0";
                 topPanel.classList.add("scrolled"); 
             } else {
-                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.src = "https://navipromotions.in/img/logo/navi-logo web manju.png"; 
                 logo.style.marginTop = "10px";  
                 topPanel.classList.remove("scrolled");
             }
