--- a/blog-sec.html
+++ b/blog-sec.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <link rel="canonical" href="https://navipromotions.in/blog-sec.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
@@ -22,7 +22,8 @@
    
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
-    Navi Promotions - Latest Blogs and Insights</head>
+    <title>Navi Promotions - Latest Blogs and Insights</title>
+</head>
 
 <body>
 
@@ -34,7 +35,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -114,7 +115,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-background-image">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -136,7 +137,7 @@
 
                         <a href="blog4.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="img/images/blog4.avif" alt="project">
+                                <img src="https://navipromotions.in/img/images/blog4.avif" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
@@ -154,7 +155,7 @@
 
                         <a href="blog5.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="img/images/blog5.avif" alt="project">
+                                <img src="https://navipromotions.in/img/images/blog5.avif" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
@@ -172,7 +173,7 @@
 
                         <a href="blog6.html" class="mil-card mil-mb-60">
                             <div class="mil-cover-frame">
-                                <img src="img/images/blog6.avif" alt="project">
+                                <img src="https://navipromotions.in/img/images/blog6.avif" alt="project">
                             </div>
                             <div class="mil-description">
                                 <div class="mil-card-title">
@@ -211,7 +212,7 @@
                             <h5 class="mil-list-title mil-mb-30">About Navi Promotions</h5>
                             <p class="mil-mb-30">Navi Promotions is a dynamic marketing agency specializing in digital marketing, outdoor advertising, event promotions, and branding solutions. We help businesses enhance their visibility and connect with their target audience effectively.</p>
                             <a href="#." class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/images/vishnu.webp" alt="cover"></div>
+                                <div class="mil-cover-frame"><img src="https://navipromotions.in/img/images/vishnu.webp" alt="cover"></div>
                                 <div class="mil-description">
                                     <h4 class="mil-font-3 mil-accent">Naga Vishnu</h4>
                                     <p class="mil-text-sm">CEO & Founder</p>
@@ -276,13 +277,13 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 10px;" >
+                            <img src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 10px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
@@ -366,12 +367,12 @@
             var topPanel = document.querySelector(".mil-top-panel");
 
             if (window.scrollY > 50) {
-                logo.src = "img/logo/fixed-logo.png";
+                logo.src = "https://navipromotions.in/img/logo/fixed-logo.png";
                 logo.style.margin = "0";  
                 logo.style.padding = "0";
                 topPanel.classList.add("scrolled"); 
             } else {
-                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.src = "https://navipromotions.in/img/logo/navi-logo web manju.png"; 
                 logo.style.marginTop = "10px";  
                 topPanel.classList.remove("scrolled");
             }
