--- a/blog5.html
+++ b/blog5.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <link rel="canonical" href="https://navipromotions.in/blog5.html">
@@ -32,7 +32,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -81,7 +81,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm-2 mil-deep-bg mil-dark-bg">
-            <img src="img/images/blog5.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
+            <img src="https://navipromotions.in/img/images/blog5.avif" class="mil-background-image" style="object-position: center" alt="Publication cover">
             <div class="mil-overlay"></div>
         </div>
         <!-- banner end -->
@@ -95,7 +95,7 @@
                         <span class="mil-suptitle mil-accent mil-mb-30">Event Marketing</span>
                         <h1 class="mil-up-font mil-mb-30">Creating Buzz: The Art of Event Promotion</h1>
                         <!-- <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
-                            <li class="mil-post-author"><img src="img/faces/4.jpg" alt="Author"><span>Navin Raj</span></li>
+                            <li class="mil-post-author"><img src="https://navipromotions.in/img/faces/4.jpg" alt="Author"><span>Navin Raj</span></li>
                             <li>12 Feb. 2024</li>
                             <li>12 min read</li>
                         </ul> -->
@@ -130,10 +130,10 @@
 
                         <div class="row mil-mb-30">
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/images/blog5-sub1.avif" alt="event promotion" class="mil-post-image">
+                                <img src="https://navipromotions.in/img/images/blog5-sub1.avif" alt="event promotion" class="mil-post-image">
                             </div>
                             <div class="col-xl-6 mil-mb-30">
-                                <img src="img/images/blog5-sub2.avif" alt="event marketing" class="mil-post-image">
+                                <img src="https://navipromotions.in/img/images/blog5-sub2.avif" alt="event marketing" class="mil-post-image">
                             </div>
                         </div>
 
@@ -164,7 +164,7 @@
                             <h5 class="mil-list-title mil-mb-30">About Navi Promotions</h5>
                             <p class="mil-mb-30">Navi Promotions is a dynamic marketing agency specializing in digital marketing, outdoor advertising, event promotions, and branding solutions. We help businesses enhance their visibility and connect with their target audience effectively.</p>
                             <a href="#." class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/images/vishnu.webp" alt="cover"></div>
+                                <div class="mil-cover-frame"><img src="https://navipromotions.in/img/images/vishnu.webp" alt="cover"></div>
                                 <div class="mil-description">
                                     <h4 class="mil-font-3 mil-accent">Naga Vishnu</h4>
                                     <p class="mil-text-sm">CEO & Founder</p>
@@ -229,13 +229,13 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
 
@@ -302,12 +302,12 @@
             var topPanel = document.querySelector(".mil-top-panel");
 
             if (window.scrollY > 50) {
-                logo.src = "img/logo/fixed-logo.png";
+                logo.src = "https://navipromotions.in/img/logo/fixed-logo.png";
                 logo.style.margin = "0";  
                 logo.style.padding = "0";
                 topPanel.classList.add("scrolled"); 
             } else {
-                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.src = "https://navipromotions.in/img/logo/navi-logo web manju.png"; 
                 logo.style.marginTop = "10px";  
                 topPanel.classList.remove("scrolled");
             }
