--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <link rel="canonical" href="https://navipromotions.in/contact.html">
@@ -21,7 +21,8 @@
 
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
-    Navi Promotions - Get in Touch with Us</head>
+    <title>Navi Promotions - Get in Touch with Us</title>
+</head>
 
 <body>
 
@@ -33,7 +34,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -113,7 +114,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-background-image">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -271,10 +272,11 @@
 
                     <h5 class="mil-mb-15">Follow Us</h5>
                     <p>
-                        <a href="https://www.facebook.com/navipromotions.in" target="_blank" class="mil-mr-10">Facebook</a> | 
-                        <a href="https://www.linkedin.com/company/navipromotions" target="_blank" class="mil-mr-10">LinkedIn</a> | 
-                        <a href="https://www.instagram.com/navipromotions.in" target="_blank">Instagram</a>
+                        <a href="https://www.facebook.com/navipromotions.in" target="_blank" rel="noopener noreferrer" class="mil-mr-10">Facebook</a> | 
+                        <a href="https://www.linkedin.com/company/navipromotions" target="_blank" rel="noopener noreferrer" class="mil-mr-10">LinkedIn</a> | 
+                        <a href="https://www.instagram.com/navipromotions.in" target="_blank" rel="noopener noreferrer">Instagram</a>
                     </p>
+                    
                 </div>
             </div>
         </div>
@@ -287,13 +289,13 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
 
@@ -376,12 +378,12 @@
             var topPanel = document.querySelector(".mil-top-panel");
 
             if (window.scrollY > 50) {
-                logo.src = "img/logo/fixed-logo.png";
+                logo.src = "https://navipromotions.in/img/logo/fixed-logo.png";
                 logo.style.margin = "0";  
                 logo.style.padding = "0";
                 topPanel.classList.add("scrolled"); 
             } else {
-                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.src = "https://navipromotions.in/img/logo/navi-logo web manju.png"; 
                 logo.style.marginTop = "10px";  
                 topPanel.classList.remove("scrolled");
             }
