--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
@@ -20,7 +20,8 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
 
     <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    Navi Promotions - Portfolio and Projects</head>
+    <title>Navi Promotions - Portfolio and Projects</title>
+</head>
 
 <body>
 
@@ -32,7 +33,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -112,7 +113,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-background-image">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -138,7 +139,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/images/project1.jpg" alt="Project">
+                            <img src="https://navipromotions.in/img/images/project1.jpg" alt="Project">
                         </div>
 
                     </div>
@@ -157,7 +158,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover mil-type-2">
-                            <img src="img/images/project2.avif" alt="Project">
+                            <img src="https://navipromotions.in/img/images/project2.avif" alt="Project">
                         </div>
 
                     </div>
@@ -176,7 +177,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/images/project3.avif" alt="Project">
+                            <img src="https://navipromotions.in/img/images/project3.avif" alt="Project">
                         </div>
 
                     </div>
@@ -194,7 +195,7 @@
                 <div class="row flex-sm-row-reverse justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="img/projects/alagu gym 1.jpg" alt="Alagu Gym">
+                            <img src="https://navipromotions.in/img/projects/alagu gym 1.jpg" alt="Alagu Gym">
                         </div>
                     </div>
                     <div class="col-xl-5 mil-mb-60">
@@ -211,7 +212,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/dental care1.avif" alt="Project">
+                            <img src="https://navipromotions.in/img/projects/dental care1.avif" alt="Project">
                         </div>
 
                     </div>
@@ -251,13 +252,13 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
@@ -340,12 +341,12 @@
             var topPanel = document.querySelector(".mil-top-panel");
 
             if (window.scrollY > 50) {
-                logo.src = "img/logo/fixed-logo.png";
+                logo.src = "https://navipromotions.in/img/logo/fixed-logo.png";
                 logo.style.margin = "0";  
                 logo.style.padding = "0";
                 topPanel.classList.add("scrolled"); 
             } else {
-                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.src = "https://navipromotions.in/img/logo/navi-logo web manju.png"; 
                 logo.style.marginTop = "10px";  
                 topPanel.classList.remove("scrolled");
             }
