--- a/project1.html
+++ b/project1.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- itsulu css -->
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
@@ -32,7 +32,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -112,7 +112,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-background-image">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -166,19 +166,19 @@
 
                                 <ul class="mil-check-icon-list mil-mb-15">
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">SEO-friendly content for better visibility.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Fully responsive design across all devices.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Enhanced company logo and branding.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Optimized for high-speed performance.</span>
                                     </li>
                                 </ul>
@@ -188,15 +188,15 @@
 
                                 <ul class="mil-check-icon-list">
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Smooth user experience and interface.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Hosted on a secure and scalable server.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Zero downtime and traffic management.</span>
                                     </li>
                                 </ul>
@@ -226,25 +226,25 @@
 
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/3.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/3.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Optimized content to improve search engine ranking.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/2.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/2.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Consistent branding with a refined company logo.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/5.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/5.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Responsive design for mobile, tablet, and desktop.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/6.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/6.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Hosted on a high-performance cloud server.</p>
                         </div>
@@ -253,7 +253,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/images/project1-sub1.avif" alt="Project">
+                            <img src="https://navipromotions.in/img/images/project1-sub1.avif" alt="Project">
                         </div>
 
                     </div>
@@ -267,25 +267,25 @@
 
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/7.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/7.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Happier clients with a better online experience.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/4.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/md/4.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Improved user experience and engagement.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/8.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/8.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Better accessibility across all devices.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/9.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/9.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Enhanced digital marketing and brand promotion.</p>
                         </div>
@@ -294,7 +294,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/images/project1-sub2.jpg" alt="Project">
+                            <img src="https://navipromotions.in/img/images/project1-sub2.jpg" alt="Project">
                         </div>
 
                     </div>
@@ -322,7 +322,7 @@
                     <div class="col-md-6 col-xl-4">
                         <div class="mil-icon-box-2 mil-mb-60">
                             <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/1.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/md/1.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
                                 <h4 class="mil-mb-30">SEO Optimization</h4>
@@ -333,7 +333,7 @@
                     <div class="col-md-6 col-xl-4">
                         <div class="mil-icon-box-2 mil-mb-60">
                             <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/2.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/md/2.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
                                 <h4 class="mil-mb-30">Enhanced Branding</h4>
@@ -344,7 +344,7 @@
                     <div class="col-md-6 col-xl-4">
                         <div class="mil-icon-box-2 mil-mb-60">
                             <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/3.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/md/3.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
                                 <h4 class="mil-mb-30">Performance & Hosting</h4>
@@ -379,13 +379,13 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png"  alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="https://navipromotions.in/img/logo/navi-logo web manju.png"  alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
@@ -468,12 +468,12 @@
             var topPanel = document.querySelector(".mil-top-panel");
 
             if (window.scrollY > 50) {
-                logo.src = "img/logo/fixed-logo.png";
+                logo.src = "https://navipromotions.in/img/logo/fixed-logo.png";
                 logo.style.margin = "0";  
                 logo.style.padding = "0";
                 topPanel.classList.add("scrolled"); 
             } else {
-                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.src = "https://navipromotions.in/img/logo/navi-logo web manju.png"; 
                 logo.style.marginTop = "10px";  
                 topPanel.classList.remove("scrolled");
             }
