--- a/project5.html
+++ b/project5.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
@@ -32,7 +32,7 @@
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="index.html" class="mil-logo">
-                        <img id="logo" src="img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
+                        <img id="logo" src="https://navipromotions.in/img/logo/navi-logo web manju.png" alt="NaviPromotion Logo" style="width: 300px;" >
                     </a>
                     <div class="mil-navigation">
                         <nav>
@@ -112,7 +112,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-background-image">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -170,19 +170,19 @@
 
                                 <ul class="mil-check-icon-list mil-mb-15">
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">SEO-optimized content for better visibility.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Fully responsive design for desktop and mobile.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Detailed service pages for different dental treatments.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Fast and efficient performance for a smooth user experience.</span>
                                     </li>
                                 </ul>
@@ -192,15 +192,15 @@
 
                                 <ul class="mil-check-icon-list">
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">User-friendly navigation and appointment booking system.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Informative content about dental procedures and care.</span>
                                     </li>
                                     <li>
-                                        <img src="img/icons/sm/12.svg" alt="icon">
+                                        <img src="https://navipromotions.in/img/icons/sm/12.svg" alt="icon">
                                         <span class="mil-dark">Optimized for fast loading and accessibility.</span>
                                     </li>
                                 </ul>
@@ -234,25 +234,25 @@
 
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/3.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/3.svg" alt="icon">
                             </div>
                             <p class="mil-dark">SEO-optimized content to improve online visibility.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/2.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/2.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Professional branding with a clean and modern design.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/5.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/5.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Fully responsive layout for desktop, tablet, and mobile users.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/6.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/6.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Fast-loading pages for a smooth user experience.</p>
                         </div>
@@ -261,7 +261,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/dentalcare2.avif" alt="RG Dental Care Website">
+                            <img src="https://navipromotions.in/img/projects/dentalcare2.avif" alt="RG Dental Care Website">
                         </div>
 
                     </div>
@@ -275,25 +275,25 @@
 
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/7.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/7.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Increased patient inquiries through an engaging website.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/4.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/4.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Improved user experience with easy navigation and accessibility.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/8.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/8.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Seamless online appointment booking for patient convenience.</p>
                         </div>
                         <div class="mil-icon-box-head mil-long mil-mb-15">
                             <div class="mil-icon-frame mil-icon-frame-sm">
-                                <img src="img/icons/sm/9.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/sm/9.svg" alt="icon">
                             </div>
                             <p class="mil-dark">Enhanced digital marketing to boost online presence and reach.</p>
                         </div>
@@ -302,7 +302,7 @@
                     <div class="col-xl-6 mil-mb-60">
 
                         <div class="mil-project-cover">
-                            <img src="img/projects/dentalcare3.jpg" alt="RG Dental Care Impact">
+                            <img src="https://navipromotions.in/img/projects/dentalcare3.jpg" alt="RG Dental Care Impact">
                         </div>
 
                     </div>
@@ -333,7 +333,7 @@
                     <div class="col-md-6 col-xl-4">
                         <div class="mil-icon-box-2 mil-mb-60">
                             <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/1.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/md/1.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
                                 <h4 class="mil-mb-30">Enhanced Online Visibility</h4>
@@ -344,7 +344,7 @@
                     <div class="col-md-6 col-xl-4">
                         <div class="mil-icon-box-2 mil-mb-60">
                             <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/2.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/md/2.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
                                 <h4 class="mil-mb-30">Seamless Patient Experience</h4>
@@ -355,7 +355,7 @@
                     <div class="col-md-6 col-xl-4">
                         <div class="mil-icon-box-2 mil-mb-60">
                             <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/3.svg" alt="icon">
+                                <img src="https://navipromotions.in/img/icons/md/3.svg" alt="icon">
                             </div>
                             <div class="mil-box-text">
                                 <h4 class="mil-mb-30">Secure & Reliable Performance</h4>
@@ -394,13 +394,13 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
+            <img src="https://navipromotions.in/img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png"  alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="https://navipromotions.in/img/logo/navi-logo web manju.png"  alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
@@ -483,12 +483,12 @@
             var topPanel = document.querySelector(".mil-top-panel");
 
             if (window.scrollY > 50) {
-                logo.src = "img/logo/fixed-logo.png";
+                logo.src = "https://navipromotions.in/img/logo/fixed-logo.png";
                 logo.style.margin = "0";  
                 logo.style.padding = "0";
                 topPanel.classList.add("scrolled"); 
             } else {
-                logo.src = "img/logo/navi-logo web manju.png"; 
+                logo.src = "https://navipromotions.in/img/logo/navi-logo web manju.png"; 
                 logo.style.marginTop = "10px";  
                 topPanel.classList.remove("scrolled");
             }
